--- a/Style.css
+++ b/Style.css
@@ -1,6 +1,7 @@
 
 body{
     background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
@@ -9,10 +10,9 @@ body{
 
 }
 
-
 ul{
     background-color: black;
-    padding: 20px;
+    padding: 25px;
     border-radius: 10px;
 }
 li{
@@ -32,4 +32,58 @@ li a:hover{
 
 .cadastrarEntrar{
     float: right;
+}
+
+.entrada{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+    padding-top: 30px;
+    font-size: 50px;
+    background-color: #188BDF;
+    z-index: 3;
+    /* background-image: url(9d33fc2fded1bbfa0c6716fcd7f3df50.jpg);
+    background-size: cover; 
+    background-position: center;   */
+    width: 100%;
+    height: 800px;
+    
+}
+h1{
+    z-index: 4;
+}
+
+h5{
+    z-index: 5;
+}
+
+.btn1{
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    color: black;
+    width: 140px;
+    height: 60px;
+    font-size: 20px;
+    border-radius: 10px;
+    /* margin-left: 740px; */
+    z-index: 3;
+
+}
+
+
+.btn1 a{
+    text-decoration: none;
+    color: white;
+}
+
+img{
+    z-index: 1;
+    position: absolute;
+    opacity: 0.5;
+    width: 800;
+    height: 100%;
 }
