--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,8 @@
 
 body{
-    background-color:  white;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #ffffff;
+    
+    font-family:"Archivo", sans-serif;
 
 
 }
@@ -11,9 +12,10 @@ body{
 /* Cabeçalho */
 
 ul{
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(85,151,250, 0.5); 
     padding: 30px ;
     margin-top: 0px;
+    
     
 }
 li{
@@ -40,7 +42,7 @@ li a:hover{
     font-weight: bold;
     z-index: 9;
     position: fixed;
-    width: 1600px
+    width: 1396px;
     
     
     
@@ -59,7 +61,7 @@ li a:hover{
     text-align: center;
     padding-top: 30px;
     font-size: 50px;
-    background: linear-gradient(to right, #188BDF, #adddff);
+    background: linear-gradient(to right, #5597FA, #adddff);
     z-index: 3;
     /* background-image: url(9d33fc2fded1bbfa0c6716fcd7f3df50.jpg);
     background-size: cover; 
@@ -110,9 +112,42 @@ h5{
 /* Página o que é o Olimpo */
 
 .oque{
-    color: #188BDF;
+    font-family:"Archivo", sans-serif;
     width: 100%;
     height: 800px;
+    color: #5597FA;
+}
+
+.oque h2{
+    padding-top: 20px;
+    font-size: 70px;
+}
+
+.oque p{
+    color: black;
+}
+
+.imgnos{
+    float: left;
+    width: 450px;
+    padding-right: 20px;
+  
+}
+
+.t1{
+    width: 500px;
+}
+
+
+.teste{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo{
+    display: flex;
+
 }
 
 
@@ -144,6 +179,7 @@ h5{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 
 }
 
@@ -166,14 +202,15 @@ h5{
     border-radius: 32px;
     border: 0;
     font-weight: bold;
-    background: linear-gradient(to right, #188BDF, #adddff);
+    background: linear-gradient(to right, #5597FA, #adddff);
 }
 
 .servicos h1{
     position: absolute;
     top: 1750px;
-    color: #188BDF;
+    color: #5597FA;
     font-size: 70px;
 }
+
 
 /* Acaba aqui "Nossos serviços" */
