--- a/cadastro.css
+++ b/cadastro.css
@@ -1,6 +1,9 @@
 * {
     margin: 0;
     padding: 0;
+    /* border: 2px dashed; */
+    max-height: 800px;
+    font-family:"Archivo", sans-serif;
 }
 
 /* body {
@@ -18,6 +21,8 @@
     display: flex;
     justify-content: center;
     color: black;
+    position: relative;
+    bottom: 127px;
 }
 
 form {
@@ -27,15 +32,22 @@ form {
     width: 470px;
     margin: 50px auto;
     background-color: #5597FA;
-    border-radius: 4px;
+    border-radius: 10px;
+    position: relative;
+    bottom: 100px;
 }
 
 label {
     border-radius: 5px;
     padding: 10px;
+    margin: 2px auto;
 }
 
 input {
     border: 2px solid;
-    border-radius: 4px;
+    border-radius: 8px;
+    width: 90%;
+    max-width: 400px;
+    margin: 5px auto;
+    padding: 8px;
 }
